<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:scaleType="fitXY"
                android:src="@drawable/cv" />
            <androidx.appcompat.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mon Profil"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="bottom"
                    android:textColor="#fff"/>

            </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.alexzh.circleimageview.CircleImageView
                    android:id="@+id/circleview"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/firas"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="5dp"
                    app:view_shadowRadius="2dp"
                    app:view_shadowDx="2dp"
                    app:view_shadowDy="0dp"
                    app:view_borderWidth="2dp"
                    app:view_borderColor="#cccccc"
                    />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.35"
                android:padding="20dp"
                android:text="@string/languagepro"
                android:textColor="#B94C4C"
                android:textSize="14sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/languagepro_info"
                android:padding="16dp"
                android:layout_gravity="center"
                android:background="#00000000"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.35"
                android:padding="20dp"
                android:text="@string/devweb"
                android:textColor="#B94C4C"
                android:textSize="14sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/devwebinfo"
                android:padding="16dp"
                android:layout_gravity="center"
                android:background="#00000000"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.35"
                android:padding="20dp"
                android:text="@string/uml"
                android:textColor="#B94C4C"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:padding="16dp"
                android:text="@string/umlinfo"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.35"
                android:padding="20dp"
                android:text="@string/sgbd"
                android:textColor="#B94C4C"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:padding="16dp"
                android:text="@string/sgbdinfo"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.35"
                android:padding="20dp"
                android:text="@string/scrum"
                android:textColor="#B94C4C"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:padding="16dp"
                android:text="@string/scruminfo"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.35"
                android:padding="20dp"
                android:text="@string/analyse"
                android:textColor="#B94C4C"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:padding="16dp"
                android:text="@string/analyseinfo"
                android:textSize="14sp" />

        </LinearLayout>



    </LinearLayout>
</ScrollView>