<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:scaleType="fitXY"
                android:src="@drawable/cv" />

            <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="bottom"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.alexzh.circleimageview.CircleImageView
                    android:id="@+id/circleview"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="70dp"
                    android:src="@drawable/firas"
                    app:view_borderColor="#cccccc"
                    app:view_borderWidth="2dp"
                    app:view_shadowDx="2dp"
                    app:view_shadowDy="0dp"
                    app:view_shadowRadius="2dp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/metrosfax"
                        android:textColor="#010404"
                        android:textSize="14sp" />
                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/metrosfaxinfo"
                        android:textColor="#010404"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/friplocal"
                        android:textColor="#010404"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/friplocalinfo"
                        android:textColor="#010404"
                        android:textSize="14sp" />
                </TableRow>


                <TableRow>
                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/iit"
                        android:textColor="#010404"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/iitinfo"
                        android:textColor="#010404"
                        android:textSize="14sp" />
                </TableRow>


                <TableRow>
                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/facultefsegsapp"
                        android:textColor="#010404"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/facultefsegsappinfo"
                        android:textColor="#010404"
                        android:textSize="14sp" />
                </TableRow>


                <TableRow>
                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/stageete"
                        android:textColor="#010404"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.35"
                        android:padding="20dp"
                        android:text="@string/stageeteinfo"
                        android:textColor="#010404"
                        android:textSize="14sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>